<resources>
    <string name="app_name">星迹</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_role">Role</string>
    <string name="role_student">Student</string>
    <string name="role_teacher">Teacher</string>
    <string name="string_time">时间：</string>
    <string name="string_local">地点：</string>
    <string name="string_teacher">老师：</string>
    <string name="string_course">课程名</string>
    <string name="string_issign">已签到</string>
    <string name="string_notsign">未签到</string>
    <string name="string_isselected">已选课</string>
    <string name="string_notselected">未选课</string>
    <string name="register">Register</string>
    <string name="role">身份：</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
