<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/f_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"

        android:foreground="?android:attr/selectableItemBackground"

        app:cardCornerRadius="10dp"
        app:cardElevation="100dp"
        app:cardBackgroundColor="@color/design_default_color_primary"

        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/bg"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@android:mipmap/sym_def_app_icon" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:maxLines="1"
                android:text="@string/string_course"
                android:textColor="#FFF"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/home_card_teacher"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="110dp"
                android:maxLines="1"
                android:text="@string/string_teacher"
                android:textColor="#FFF"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/home_card_date"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="80dp"
                android:maxLines="1"
                android:text="@string/string_time"
                android:textColor="#FFF"
                android:textSize="17sp"
                android:layout_marginEnd="5dp" />
            <TextView
                android:id="@+id/home_card_loacl"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="50dp"
                android:maxLines="1"
                android:text="@string/string_local"
                android:textColor="#FFF"
                android:textSize="17sp"
                android:layout_marginEnd="5dp" />
            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:maxLines="1"
                android:text="@string/string_issign"
                android:textColor="#FFF"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>